Fix problem with overlapping elements in taskbar

--- a/src/app/components/navbar/taskbar-conflicts.scss
+++ b/src/app/components/navbar/taskbar-conflicts.scss
@@ -1,4 +1,4 @@
-.conflicts {
+#conflicts {
   position: relative;
   margin-right: 12px;
 
