--- a/src/app/components/navbar/taskbar.scss
+++ b/src/app/components/navbar/taskbar.scss
@@ -21,6 +21,14 @@
     pointer-events: none;
   }
 
+  #update {
+    z-index: 2;
+  }
+
+  #conflicts {
+    z-index: 1;
+  }
+
   @keyframes slide-down {
     from {
       transform: translateY(-17px);
@@ -42,7 +50,7 @@
       transform: translateY(-18px);
     }
   }
-  
+
   .slide-up {
 	  animation: 1s infinite slide-up;
   }
